--- a/Votowf/Votowf.csproj
+++ b/Votowf/Votowf.csproj
@@ -46,17 +46,35 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Alcalde.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Alcalde.Designer.cs">
+      <DependentUpon>Alcalde.cs</DependentUpon>
+    </Compile>
     <Compile Include="Contenedor.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Contenedor.Designer.cs">
       <DependentUpon>Contenedor.cs</DependentUpon>
     </Compile>
+    <Compile Include="Diputado.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Diputado.Designer.cs">
+      <DependentUpon>Diputado.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="gonzalo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="gonzalo.Designer.cs">
+      <DependentUpon>gonzalo.cs</DependentUpon>
     </Compile>
     <Compile Include="presidente.cs">
       <SubType>Form</SubType>
@@ -66,11 +84,32 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Regidor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Regidor.Designer.cs">
+      <DependentUpon>Regidor.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Senador.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Senador.Designer.cs">
+      <DependentUpon>Senador.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="Alcalde.resx">
+      <DependentUpon>Alcalde.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Contenedor.resx">
       <DependentUpon>Contenedor.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Diputado.resx">
+      <DependentUpon>Diputado.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="gonzalo.resx">
+      <DependentUpon>gonzalo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="presidente.resx">
       <DependentUpon>presidente.cs</DependentUpon>
@@ -85,6 +124,12 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="Regidor.resx">
+      <DependentUpon>Regidor.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Senador.resx">
+      <DependentUpon>Senador.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -99,13 +144,31 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Resources\GONZALOCASTILLO.PNG" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Resources\MANUELCRESPO.JPG" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\LEONELFERNANDEZ.JPG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\GONZALOCASTILLO.PNG" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\22.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\8.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\7.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Screenshot_2019-10-15 Junta Central Electoral.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Screenshot_2019-10-15 Confirmar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Screenshot_2019-10-15 Confirmar%281%29.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
