--- a/Votowf/packages.config
+++ b/Votowf/packages.config
@@ -8,4 +8,5 @@
   <package id="System.Data.SQLite.Core" version="1.0.111.0" targetFramework="net472" />
   <package id="System.Data.SQLite.EF6" version="1.0.111.0" targetFramework="net472" />
   <package id="System.Data.SQLite.Linq" version="1.0.111.0" targetFramework="net472" />
+  <package id="ZXing.Net" version="0.16.5" targetFramework="net472" />
 </packages>
