--- a/Votowf/Votowf.csproj
+++ b/Votowf/Votowf.csproj
@@ -235,6 +235,12 @@
     <Compile Include="Senador.Designer.cs">
       <DependentUpon>Senador.cs</DependentUpon>
     </Compile>
+    <Compile Include="voto.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="voto.Designer.cs">
+      <DependentUpon>voto.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Alcalde.resx">
       <DependentUpon>Alcalde.cs</DependentUpon>
     </EmbeddedResource>
@@ -313,6 +319,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Senador.resx">
       <DependentUpon>Senador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="voto.resx">
+      <DependentUpon>voto.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
