--- a/Votowf/Votowf.csproj
+++ b/Votowf/Votowf.csproj
@@ -81,6 +81,7 @@
     </Reference>
     <Reference Include="System.Drawing.Design" />
     <Reference Include="System.Management" />
+    <Reference Include="System.Speech" />
     <Reference Include="System.Transactions" />
     <Reference Include="System.Web" />
     <Reference Include="System.Web.Services" />
