--- a/Votowf/Votowf.csproj
+++ b/Votowf/Votowf.csproj
@@ -586,6 +586,12 @@
   <ItemGroup>
     <None Include="Resources\logonuevo.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\1200px-MAIS.svg.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\gear-logo-vector-png-open-2000.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.111.0\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.111.0\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
