--- a/Votowf/Votowf.csproj
+++ b/Votowf/Votowf.csproj
@@ -592,6 +592,9 @@
   <ItemGroup>
     <None Include="Resources\gear-logo-vector-png-open-2000.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\logonuevo1.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\System.Data.SQLite.Core.1.0.111.0\build\net46\System.Data.SQLite.Core.targets" Condition="Exists('..\packages\System.Data.SQLite.Core.1.0.111.0\build\net46\System.Data.SQLite.Core.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
